@startuml
' Enum definitions
enum gender_enum {
    male
    female
    other
}

enum reminder_type {
    anniversary
    first_date
    custom
}

enum frequency_enum {
    once
    yearly
    monthly
}

enum idea_category {
    activity
    movie
    music
}

entity users {
  *id : UUID <<PK>>
  --
  email : varchar <<UQ>>
  username : varchar <<UQ>>
  password_hash : varchar
  first_name : varchar
  last_name : varchar
  gender : gender_enum
  date_of_birth : date
  profile_photo_url : varchar
  bio : text
  timezone : varchar
  settings : jsonb
  created_at : timestamp
  updated_at : timestamp
}

entity relationships {
  *id : UUID <<PK>>
  --
  user_a_id : UUID <<FK>>
  user_b_id : UUID <<FK>>
  pairing_code : varchar(6) <<UQ>>
  since_date : date
  status : varchar
  created_at : timestamp
  updated_at : timestamp
}

entity photos {
  *id : UUID <<PK>>
  --
  relationship_id : UUID <<FK>>
  url : varchar
  thumbnail_url : varchar
  caption : varchar
  uploaded_at : timestamp
}

entity reminders {
  *id : UUID <<PK>>
  --
  relationship_id : UUID <<FK>>
  type : reminder_type
  date : date
  text : varchar
  frequency : frequency_enum
  is_sent : boolean
  created_at : timestamp
}

entity date_ideas {
  *id : UUID <<PK>>
  --
  category : idea_category
  title : varchar
  description : text
  created_by : varchar
  created_at : timestamp
}

entity idea_usages {
  *id : UUID <<PK>>
  --
  relationship_id : UUID <<FK>>
  idea_id : UUID <<FK>>
  used_at : timestamp
}

entity mood_entries {
  *id : UUID <<PK>>
  --
  relationship_id : UUID <<FK>>
  user_id : UUID <<FK>>
  mood : varchar
  note : text
  created_at : timestamp
}

entity notifications {
  *id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  type : varchar
  payload : jsonb
  status : varchar
  scheduled_at : timestamp
  sent_at : timestamp
}

' Relationships
users ||--o{ relationships : uploads_as_user_a
users ||--o{ relationships : uploads_as_user_b
relationships ||--o{ photos : contains
relationships ||--o{ reminders : schedules
relationships ||--o{ idea_usages : logs
relationships ||--o{ mood_entries : records
users ||--o{ mood_entries : logs
users ||--o{ notifications : receives

date_ideas ||--o{ idea_usages : used_in

@enduml
